// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow-direction prop 1`] = `
<div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-field">
  <div class="buri-cell__value buri-cell__value--alone">
    <div class="buri-field__body"><input type="text" class="buri-field__control"></div>
  </div><i class="buri-icon buri-icon-arrow-up buri-cell__right-icon">
    <!----></i>
</div>
`;

exports[`clearable 1`] = `
<div class="buri-cell buri-field">
  <div class="buri-cell__value buri-cell__value--alone">
    <div class="buri-field__body"><input type="text" class="buri-field__control"></div>
  </div>
</div>
`;

exports[`clearable 2`] = `
<div class="buri-cell buri-field">
  <div class="buri-cell__value buri-cell__value--alone">
    <div class="buri-field__body"><input type="text" class="buri-field__control"><i class="buri-icon buri-icon-clear buri-field__clear">
        <!----></i></div>
  </div>
</div>
`;

exports[`label-class prop 1`] = `
<div class="buri-cell buri-field">
  <div class="buri-cell__title buri-field__label custom-label-class"><span>Label</span></div>
  <div class="buri-cell__value">
    <div class="buri-field__body"><input type="text" class="buri-field__control"></div>
  </div>
</div>
`;

exports[`label-width prop with unit 1`] = `
<div class="buri-cell buri-field">
  <div class="buri-cell__title buri-field__label" style="width: 10rem;"><span>Label</span></div>
  <div class="buri-cell__value">
    <div class="buri-field__body"><input type="text" class="buri-field__control"></div>
  </div>
</div>
`;

exports[`label-width prop without unit 1`] = `
<div class="buri-cell buri-field">
  <div class="buri-cell__title buri-field__label" style="width: 100px;"><span>Label</span></div>
  <div class="buri-cell__value">
    <div class="buri-field__body"><input type="text" class="buri-field__control"></div>
  </div>
</div>
`;

exports[`render input slot 1`] = `
<div class="buri-cell buri-field">
  <div class="buri-cell__value buri-cell__value--alone">
    <div class="buri-field__body">
      <div class="buri-field__control">Custom Input</div>
    </div>
  </div>
</div>
`;

exports[`render label slot 1`] = `
<div class="buri-cell buri-field">
  <div class="buri-cell__title buri-field__label">Custom Label</div>
  <div class="buri-cell__value">
    <div class="buri-field__body"><input type="text" class="buri-field__control"></div>
  </div>
</div>
`;

exports[`render textarea 1`] = `
<div class="buri-cell buri-field">
  <div class="buri-cell__value buri-cell__value--alone">
    <div class="buri-field__body"><textarea class="buri-field__control" style="height: auto;"></textarea></div>
  </div>
</div>
`;

exports[`size prop 1`] = `
<div class="buri-cell buri-cell--large buri-field">
  <div class="buri-cell__value buri-cell__value--alone">
    <div class="buri-field__body"><input type="text" class="buri-field__control"></div>
  </div>
</div>
`;
